test/src/e2e_vm_tests/test_programs/should_pass/trait_coherence/trait_coherence_dup/standards/src/src5.sw
library;

pub enum State { Uninitialized: () }

abi SRC5 {
    fn owner() -> State;
}

impl PartialEq for State {
    fn eq(self, other: Self) -> bool {
        true
    }
}

impl Eq for State {}
