test/src/e2e_vm_tests/test_programs/should_fail/enum_variant_unit/src/inner_lib.sw
library inner_lib;

pub enum MyEnum {
    VariantA: (),
    VariantB: u64
}

pub fn func() -> bool {
    true
}

pub struct S2 {}

impl S2 {
    pub fn new2() -> Self {
        S2 {}
    }
}